# sendly-rust

./: Cargo.toml  README.md
examples/: list_messages.rs  send_sms.rs
src/: account_resource.rs  campaigns.rs  client.rs  contacts.rs  error.rs  lib.rs  messages.rs  models.rs  verify.rs  webhook_resource.rs  webhooks.rs
tests/: client_tests.rs  errors_tests.rs  messages_batch_tests.rs  messages_schedule_tests.rs  messages_tests.rs
tests/common/: mod.rs
